# AeroEval

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: chemistry_profiles.json  cots_database.json  esc_profiles.json  user_input_example.json
include/constants/: PhysicalConstants.hpp
include/module1_feasibility/: FeasibilityGate.hpp
include/module2_kinematics/: MissionProfiler.hpp
include/module3_physics/: Aerodynamics.hpp  MassIteration.hpp  Structures.hpp  Thermodynamics.hpp
include/module4_optimizer/: DiscreteMINLP.hpp
include/module5_validation/: SensitivityAnalysis.hpp
include/roles/: IPayloadRole.hpp  TaxonomyRoles.hpp
include/utils/: DataStructures.hpp  JsonParser.hpp
src/: main.cpp
src/module1_feasibility/: FeasibilityGate.cpp
src/module2_kinematics/: MissionProfiler.cpp
src/module3_physics/: Aerodynamics.cpp  MassIteration.cpp  Structures.cpp  Thermodynamics.cpp
src/module4_optimizer/: DiscreteMINLP.cpp
src/module5_validation/: SensitivityAnalysis.cpp
src/utils/: JsonParser.cpp
tests/: parameter_sweeps.py  realistic_test.py
web_ui/: package-lock.json  package.json
web_ui/app/: actions.ts  globals.css  layout.tsx  page.tsx
